# Algorithmic-Trading-Bot

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
backtest/: bt_combined.py  bt_ma_crossover.py
scripts/: run_backtest.py  run_combined.py
src/: config.py  main.py
src/broker/: alpaca_client.py  base.py
src/data/: base.py  market_data.py
src/models/: trade.py
src/risk/: position_sizer.py
src/strategy/: base.py  indicators.py  ma_crossover.py  multi_signal.py
src/utils/: logging_config.py
tests/: conftest.py  test_alpaca_client.py  test_config.py  test_indicators.py  test_integration.py  test_ma_crossover.py  test_market_data.py  test_models.py  test_multi_signal.py  test_position_sizer.py
